adding web components

--- a/apps/ng/src/app/app.component.html
+++ b/apps/ng/src/app/app.component.html
@@ -2,3 +2,4 @@
 <resume-ng-home></resume-ng-home>
 <resume-ng-about id="about_me"></resume-ng-about>
 <div id="skills"></div>
+<footer-lib></footer-lib>
