--- a/apps/ng/src/app/app.component.html
+++ b/apps/ng/src/app/app.component.html
@@ -1,5 +1,20 @@
-<resume-ng-header></resume-ng-header>
-<resume-ng-home></resume-ng-home>
-<resume-ng-about id="about_me"></resume-ng-about>
-<div id="skills"></div>
-<footer-lib></footer-lib>
+<resume-ng-header ></resume-ng-header>
+<div class="angular">
+    <resume-ng-home></resume-ng-home>
+</div>
+<div class="angular">
+    <resume-ng-about id="about_me"></resume-ng-about>
+</div>
+<div id="react">
+    <div id="skills"></div>
+</div>
+
+<div id="vue">
+    <my-vue-web-comp [info]="info"></my-vue-web-comp>
+</div>
+
+<div id="webComponent">
+    <footer-lib id="footer"></footer-lib>
+</div>
+<div class="coding page-icon"></div>
+<div class="braces page-icon"></div>
