--- a/apps/ng/src/app/app.component.html
+++ b/apps/ng/src/app/app.component.html
@@ -1,4 +1,5 @@
 <resume-ng-header ></resume-ng-header>
+<main>
 <div class="angular">
     <resume-ng-home [info]="info"></resume-ng-home>
 <!-- </div>
@@ -13,6 +14,7 @@
     <my-vue-web-comp [info]="info"></my-vue-web-comp>
 </div>
 
+</main>
 <div id="webComponent">
     <footer-lib id="footer"></footer-lib>
 </div>
