--- a/libs/angular-lib/src/lib/about-project/about-project.component.html
+++ b/libs/angular-lib/src/lib/about-project/about-project.component.html
@@ -1,16 +1,23 @@
-<div class="about-project">
-    <p>
-        I used <span> Angular, React, Vue </span> and <span>webComponents</span> to develop this web page. Host application is in <span>Angular</span>
-        and different components are developed in different libraries. And this application is hosted in <span>AWS</span>.<br/><br/><i>Please check below image for clear picture.</i>
 
-    </p>
-    <div class="image-overview-container"></div>
+<section>
+    <article class="about-project">
+        <p>
+            This is web page is developed in <span> Angular, React, Vue </span> and <span>webComponents</span>. Host application is in <span>Angular</span>
+            and different components are developed in different libraries.<br/><br/><i>Check the below image for clear picture.</i>
+        </p>
+        <div class="image-overview-container"></div>
 
-    <p>
-        I used <span class="nx"> Nx monorepo </span> for this mashup. The main application is in Angular and created libraries for <span> Angular, React</span> and <span>Web components.</span>
-        Since <span class="nx">Nx</span> is yet to add support for vue components, I create a vue component in host app and converted into web component and rendering it.
-        Host application (i.e, Angular) is passing data to other components as @Inputs() (to Angular components) or as props (to react and vue)
-    </p>
+        <p>
+            I used <span class="nx"> Nx monorepo </span> for this mashup. The main application is in <span>Angular</span> and created libraries for <span> Angular, React</span> and <span>Web components.</span>
+            Since <span class="nx">Nx</span> is yet to add support for vue components, I created a vue component in host app it self and rendering it after converted into a web component.
+            Host application (i.e, Angular) is passing data to other components as @Inputs() (to Angular components) or as props (to react and vue).<br/><br/>
 
-    <p>Here is the <a href="https://github.com/adithyavinjamoori/portfolio-monorepo" target="_blank">github</a> location for this project. Enjoy!!</p>
-</div>
+            Images and styles are added in Assets Library which is shared across all libraries and host application.
+            <br/><br/>
+            And this application is hosted in <span>AWS</span>
+        </p>
+
+        <p>Here is the <a href="https://github.com/adithyavinjamoori/portfolio-monorepo" target="_blank">github</a> location for this project. Enjoy!!</p>
+    </article>
+
+</section>
