--- a/libs/angular-lib/src/lib/ng-header/ng-header.component.html
+++ b/libs/angular-lib/src/lib/ng-header/ng-header.component.html
@@ -1,10 +1,10 @@
-<div class="header">
+<header>
     <h1 class="logo"></h1>
-    <div class="nav">
+    <nav>
         <ul class="items">
             <li class="item"><a href="#about_me"> About</a></li>
             <li class="item"><a href="#skills">Skills </a> </li>
             <li class="item"><a href="#footer">Contact</a> </li>
         </ul>
-    </div>
-</div>
+    </nav>
+</header>
