--- a/libs/angular-lib/src/lib/ng-home/ng-home.component.html
+++ b/libs/angular-lib/src/lib/ng-home/ng-home.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<section class="main-container">
     <div class="image-container">
 
     </div>
@@ -16,4 +16,4 @@
     <div class="skills sub-title">
         {{skillsShort}} 
     </div>
-</div>
+</section>
