--- a/libs/angular-lib/src/lib/about/about.component.html
+++ b/libs/angular-lib/src/lib/about/about.component.html
@@ -1,8 +1,8 @@
-<div class="about-container">
+<section class="about-container">
 
-    <div class="sections">
+    <section class="sections">
 
-    <div class="left-section">
+    <section class="left-section">
         <h2 class="title">About Me</h2>
 
         <div class="image-container">
@@ -15,10 +15,10 @@
             <a class="linkdn icon" [href]="info.linkdn"></a>
             <a class="github icon" [href]="info.github"></a>
         </div>
-    </div>
-    <div class="right-section">
+    </section>
+    <section class="right-section">
         <h3>Timeline</h3>
         <app-timeline></app-timeline>
-    </div>
-    </div>
-</div>
+    </section>
+    </section>
+</section>
