--- a/libs/angular-lib/src/lib/ng-header/ng-header.component.scss
+++ b/libs/angular-lib/src/lib/ng-header/ng-header.component.scss
@@ -1,15 +1,16 @@
-.header{
+header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 1%;
     box-shadow: 0 0 10px 0px #000;
+    background: #1b1b1b;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     z-index: 10;
-    .nav .items{
+    nav .items{
         display: flex;
         list-style: none;
         .item{
