--- a/libs/assets/src/lib/styles.scss
+++ b/libs/assets/src/lib/styles.scss
@@ -369,7 +369,7 @@ body{
                 background-size: 50px;
             }
             &.PowerBI{
-                background: url("./images/icons/PowerBI.svg") center no-repeat #fff;
+                background: url("./images/icons/PowerBI.svg") center no-repeat #F0C912;
                 background-size: 50px;
             }
 
