--- a/libs/angular-lib/src/lib/about/about.component.html
+++ b/libs/angular-lib/src/lib/about/about.component.html
@@ -11,9 +11,9 @@
             {{info.aboutMe}}
         </p>
         <div class="social-media">
-            <a class="twitter icon" [href]="info.twitter"></a>
-            <a class="linkdn icon" [href]="info.linkdn"></a>
-            <a class="github icon" [href]="info.github"></a>
+            <a class="twitter icon" [href]="info.twitter">Twitter</a>
+            <a class="linkdn icon" [href]="info.linkdn">lindn</a>
+            <a class="github icon" [href]="info.github">github</a>
         </div>
     </section>
     <section class="right-section">
