--- a/libs/assets/src/lib/styles.scss
+++ b/libs/assets/src/lib/styles.scss
@@ -182,6 +182,7 @@ body{
             border-radius: 4px;
             margin-right: 20px;
             transition: 0.5s all;
+            text-indent: -999px;
         }
         .twitter{
             background: url("./images/twitter.svg")center center no-repeat #fff;
