--- a/libs/angular-lib/src/lib/about-project/about-project.component.html
+++ b/libs/angular-lib/src/lib/about-project/about-project.component.html
@@ -17,7 +17,7 @@
             And this application is hosted in <span>AWS</span>
         </p>
 
-        <p>Here is the <a href="https://github.com/adithyavinjamoori/portfolio-monorepo" target="_blank">github</a> location for this project. Enjoy!!</p>
+        <p>Here is the <a href="https://github.com/adithyavinjamoori/portfolio-monorepo" rel="noopener" target="_blank">github</a> location for this project. Enjoy!!</p>
     </article>
 
 </section>
